macro_utilities/stringify_attr/src/tests/derive/extra_attr.stderr
error: Expected a single item list
  --> $DIR/extra_attr.rs:20:11
   |
20 |         #[stringify(serde(rename(B)), extra = "C")]
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
